--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,22 +5,30 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:name=".ApartmentInfoApp"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ApartmentInfoApp"
+        android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
             android:name=".presentation.activities.AboutUsActivity"
             android:exported="false"
             android:label="@string/title_activity_about_us"
+            android:theme="@style/Theme.ApartmentInfoApp" />
+        <activity
+            android:name=".presentation.activities.MainActivity"
+            android:exported="false"
+            android:label="@string/title_activity_main"
             android:theme="@style/Theme.ApartmentInfoApp" />
         <activity
             android:name=".presentation.activities.ReviewActivity"
@@ -37,8 +45,9 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="${MAPS_API_KEY}" />
 
+
         <activity
-            android:name=".presentation.activities.MainActivity"
+            android:name=".presentation.activities.LoginActivity"
             android:exported="true"
             android:theme="@style/Theme.ApartmentInfoApp">
             <intent-filter>
